<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mifos.mifosxdroid.fragments.GrtFragment">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingRight="10dp"
       android:id="@+id/grt_view"
       android:paddingLeft="10dp">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:weightSum="2"
               android:layout_marginTop="15dp">
               <TextView
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:text="@string/group_name"
                   android:textStyle="bold"
                   android:id="@+id/tv_group_name"
                   android:gravity="left"
                   />
               <LinearLayout
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:layout_gravity="right"
                   android:gravity="right">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:gravity="right"
                       android:text="@string/status"
                       android:textStyle="bold"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/grt_status"
                       android:gravity="right" />
               </LinearLayout>
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_marginTop="10dp">
                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:gravity="right"
                       android:elevation="5dp"
                       android:weightSum="2"
                       android:background="@drawable/background_shadow">
                       <TextView
                           android:layout_width="0dp"
                           android:layout_height="match_parent"
                           android:layout_weight="1.2"
                           android:paddingLeft="10dp"
                           android:id="@+id/tv_planned_date"
                           android:text="Planned Date :"
                           android:gravity="center_vertical|left"/>

                       <Button
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="0.8"
                           android:textAllCaps="false"
                           android:textColor="#ffffff"
                           android:textStyle="bold"
                           android:text="Reschedule GRT"
                           android:id="@+id/reschedule_grt_btn"
                           android:paddingRight="5dp"
                           android:paddingLeft="5dp"

                           android:background="#fa812b"/>
                   </LinearLayout>

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textStyle="bold"
                   android:text="@string/attendance"
                   android:gravity="left"/>
               <com.mifos.mifosxdroid.uihelpers.NonScrollableListView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/client_list"
                   android:orientation="vertical"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="Comment :"/>
               <EditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:minHeight="100dp"
                   android:inputType="textMultiLine"
                   android:ems="4"
                   android:padding="10dp"
                   android:id="@+id/et_comments"
                   android:background="@drawable/comment_box"
                   android:gravity="top"
                   android:layout_alignParentLeft="true"
                   android:layout_alignParentStart="true"
                   android:layout_marginTop="10dp" />
               <LinearLayout
                   android:layout_marginTop="10dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">
                   <Spinner
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:id="@+id/staff1"
                       android:spinnerMode="dropdown"
                       android:dropDownWidth="match_parent" />
                   <Spinner
                       android:layout_width="match_parent"
                       android:layout_marginTop="10dp"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       android:gravity="center"
                       android:id="@+id/staff2"
                       android:spinnerMode="dropdown"
                       android:dropDownWidth="match_parent"/>
               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/grt_buttons"
                   android:orientation="horizontal"
                   android:weightSum="2"
                   android:layout_marginTop="10dp">
                   <Button
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:id="@+id/grt_pass_btn"
                       android:text="PASS"
                       android:background="#00c604"
                       android:textColor="#ffffff"
                       android:textStyle="bold"/>
                   <Button
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:id="@+id/grt_fail_btn"
                       android:text="FAIL"
                       android:background="#ed0314"
                       android:textColor="#ffffff"
                       android:textStyle="bold"/>
               </LinearLayout>




           </LinearLayout>


       </LinearLayout>

   </ScrollView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reschedule_grt_layout"
        android:visibility="gone"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Reschedule GRT"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="SelectDate :"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/next_grt_date"
                android:id="@+id/tv_grt_next_planned_date"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:id="@+id/edt_date"
                android:layout_weight=".3"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:layout_marginTop="5dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:inputType="textMultiLine"
            android:ems="4"
            android:padding="10dp"
            android:id="@+id/et_grt_comments"
            android:background="@drawable/comment_box"
            android:gravity="top"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttons"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/submit"
                android:text="@string/submit"
                android:background="#00c604"
                android:textColor="#ffffff"
                android:textStyle="bold"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cancel"
                android:text="@string/cancel"
                android:background="@color/gray_light"
                android:textColor="#ffffff"
                android:textStyle="bold"/>
        </LinearLayout>
        </LinearLayout>

    </ScrollView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/grt_pass_view"
        android:visibility="gone"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/group_name"
                android:textStyle="bold"
                android:id="@+id/tv_group_pass_name"
                android:gravity="left"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="right"
                android:gravity="right">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/status"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/grt_pass_status"
                    android:textStyle="bold"
                    android:gravity="right" />
            </LinearLayout>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:background="@drawable/background_shadow">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:gravity="left">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/planned"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_date_planned"
                        android:gravity="left"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:gravity="right">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/done"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_date_done"
                        android:gravity="right"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/comment"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="wrap_content"
                android:id="@+id/tv_comments"
                android:padding="10dp"
                android:background="@drawable/background_shadow"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear_layout_fail"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical">


                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:textAllCaps="false"
                        android:textColor="#ffffff"
                        android:textStyle="bold"
                        android:text="Reschedule GRT"
                        android:id="@+id/reschedule_grt_btn_for_failgrt"
                        android:paddingRight="5dp"
                        android:paddingLeft="5dp"
                        android:background="#fa812b"/>
            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/list_header"
                    android:layout_marginTop="10dp"
                    android:weightSum="2"
                    android:layout_below="@id/linear_layout_fail">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Client Name"
                        android:textStyle="bold"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Attendance (P:Present, A:Absent)"
                        android:textStyle="bold"
                        android:gravity="center"/>
                </LinearLayout>
                <com.mifos.mifosxdroid.uihelpers.NonScrollableListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/grt_list_client"
                    android:layout_below="@id/list_header"
                    />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
